--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,21 +1,21 @@
 <resources>
     <string name="app_name">GeoQuiz</string>
-    <string name="true_button">True</string>
-    <string name="false_button">False</string>
-    <string name="correct_toast">Correct!</string>
-    <string name="incorrect_toast">Incorrect!</string>
-    <string name="next_button">Next</string>
-    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
-    <string name="question_mideast">The Suez Canal connects the Read Sea and the Indian Ocean.</string>
-    <string name="question_africa">The source of the Nile River is in Egypt</string>
-    <string name="question_americas">The Amazon River is the longest river in the Americas</string>
-    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
-    <string name="previous_button">PREV</string>
-    <string name="prev_warning">You are in the first Question</string>
-    <string name="warning_text">Are you sure you want to do this?</string>
-    <string name="show_answer_button">Show Answer</string>
-    <string name="cheat_button">Cheat!</string>
-    <string name="judgement_toast">Cheating is wrong</string>
+    <string name="true_button">Verdadero</string>
+    <string name="false_button">Falso</string>
+    <string name="correct_toast">Correcto!</string>
+    <string name="incorrect_toast">Incorrecto!</string>
+    <string name="next_button">Siguiente</string>
+    <string name="question_oceans">¿El Oceano pacífico es mas grande que el océano Atlántico?.</string>
+    <string name="question_mideast">¿El Canal de Suez une el Mar Rojo y el Océano Índico?.</string>
+    <string name="question_africa">¿El origen del rio Nilo esta en Egipto?</string>
+    <string name="question_americas">¿El Rio Amazonas es el mas grande de toda América?</string>
+    <string name="question_frontera">¿Frontera y Límite son sinónimos de un mismo concepto?</string>
+    <string name="question_censo">¿Un censo es el recuento de personas que forman una población, en un ámbito geográfico dado, en un momento determinado?</string>
+    <string name="prev_warning">Esta en la primera pregunta</string>
+    <string name="warning_text">Estas seguro de hacer esto?</string>
+    <string name="show_answer_button">Ver Respuesta</string>
+    <string name="cheat_button">Copiar!</string>
+    <string name="judgement_toast">Copiar es malo</string>
 
 
 </resources>
